pridane custom info pop-up, fixed some layout issues, first search functions

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -12,13 +12,14 @@
   line-height:30px;
   background-color:#eeeeee;
   min-height: 1080px;
-  width: 20%;
+  width: 384px;
   float: left;
 }
 #section {
-  width:80%;
+  width: auto;
   min-height: 100%;
-  float: right;
+
+  margin-left: 384px;
 }
 #footer {
   background-color:black;
